# qt6-led-app

./: .gitignore  CMakeLists.txt  LedController.cpp  LedController.h  README.md  led.cpp  led.h  main.cpp  main.qml
